WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226652
DOMFileSystem::listDirectory() fails to protect |this| when going to the background thread
https://bugs.webkit.org/show_bug.cgi?id=226652
Summary
DOMFileSystem::listDirectory() fails to protect |this| when going to the back...
Chris Dumez
Reported
2021-06-04 10:34:23 PDT
DOMFileSystem::listDirectory() fails to protect |this| when going to the background thread.
Attachments
Patch
(2.46 KB, patch)
2021-06-04 10:35 PDT
,
Chris Dumez
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-06-04 10:35:16 PDT
Created
attachment 430590
[details]
Patch
EWS
Comment 2
2021-06-04 12:03:20 PDT
Committed
r278480
(
238498@main
): <
https://commits.webkit.org/238498@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 430590
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-06-04 12:04:22 PDT
<
rdar://problem/78879589
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug