DOMFileSystem::listDirectory() fails to protect |this| when going to the background thread https://bugs.webkit.org/show_bug.cgi?id=226652

Reviewed by Darin Adler.

* Modules/entriesapi/DOMFileSystem.cpp:
(WebCore::DOMFileSystem::listDirectory):


Canonical link: https://commits.webkit.org/238498@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278480 268f45cc-cd09-0410-ab3c-d52691b4dbfc